<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Label for this package -->
    <string name="app_label">Sync for XING</string>

    <!-- Main screen -->
    <string name="main_hello_android_title">Hello Android World</string>

    <!-- Preferences -->
    <string name="prefs_account_settings_title">Account Settings</string>
    <string name="prefs_account_settings_summary">Sync frequency, notifications, etc.</string>
    <string name="prefs_general_category_title">General Settings</string>
    <string name="prefs_debug_category_title">Debugging Options</string>
    <string name="prefs_debug_mock_api_calls_title">Mock API</string>
    <string name="prefs_debug_mock_api_calls_summary">Mock API Calls</string>
    <string name="prefs_debug_save_api_call_results_title">Save Results</string>
    <string name="prefs_debug_save_api_call_results_summary">Save API Call results</string>
    <string name="prefs_advanced_category_title">Advanced Settings</string>
    <string name="prefs_advanced_fetch_employment_status_summary">Fetch employment status</string>
    <string name="prefs_advanced_fetch_employment_status_title">employment status</string>
    <string name="prefs_advanced_fetch_gender_summary">Fetch Gender</string>
    <string name="prefs_advanced_fetch_gender_title">Gender</string>
    <string name="prefs_advanced_fetch_birth_date_summary">Fetch Birth Date</string>
    <string name="prefs_advanced_fetch_birth_date_title">Birth Date</string>
    <string name="prefs_advanced_fetch_private_address_summary">Fetch Private Address</string>
    <string name="prefs_advanced_fetch_private_address_title">Private Address</string>
    <string name="prefs_advanced_fetch_business_address_summary">Fetch Business Address</string>
    <string name="prefs_advanced_fetch_business_address_title">Business Address</string>
    <string name="prefs_advanced_fetch_web_profiles_summary">Fetch additional web Profiles</string>
    <string name="prefs_advanced_fetch_web_profiles_title">Web profiles</string>
    <string name="prefs_advanced_fetch_professional_experience_summary">Fetch Professional Experience</string>
    <string name="prefs_advanced_fetch_professional_experience_title">professional experience</string>
    <string name="prefs_advanced_fetch_primary_company_summary">Fetch Primary Company</string>
    <string name="prefs_advanced_fetch_primary_company_title">Primary company</string>
    <string name="prefs_advanced_fetch_permalink_summary">Fetch Permalink</string>
    <string name="prefs_advanced_fetch_permalink_title">permalink</string>

    <!-- OAuth stuff -->
    <string name="oauth_launch_flow">Launch OAuth Flow</string>
    <string name="oauth_clear_credentials">Clear Credentials</string>
    <string name="oauth_results_title">OAuth Results</string>
    <string name="oauth_token_title">Token</string>
    <string name="oauth_token_secret_title">Token Secret</string>
    <string name="oauth_login">Login via XING</string>
    <string name="oauth_introductory_blurb">Contact Sync for XING uses OAuth technology to log you into XING. Please click the button
        above which will redirect you to the XING approval page in the mobile browser. After you approve the application
        you will be returned to Contact Sync for XING</string>
    <string name="oauth_introductory_blurb_no_account">If you don\'t have a XING account you can create one with either
        the mobile browser or using your desktop browser at http://www.xing.com/</string>
    <string name="oauth_mock_hint">Attention: App running in Mock mode!</string>

    <!-- Xing API Calls -->
    <string name="oauth_perform_me_call">Call Me</string>
    <string name="oauth_perform_contacts_call">Call Contacts</string>

</resources>