<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- style="?android:attr/buttonBarButtonStyle" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_launch_oauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oauth_launch_flow"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_clear_credentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oauth_clear_credentials"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_perform_me_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oauth_perform_me_call"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_perform_contacts_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oauth_perform_contacts_call"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>